class GuiAdapter {
    constructor() {
        this.button1 = document.getElementById("button-1")
    }
}