@startuml


class ProgrammStarten{
constructor()
}
class HTMLElement{
onclick: functionRef( MouseEvent)
}
class ZahlEingeben{
setCalculatorContext(calculatorContext)
keyPressed(value)
key1Pressed()
operatorPressed()
}
class ZahlLoeschen{
setCalculatorContext(calculatorContext)
keyCPressed()
}
class CalculatorContext{
get DisplayValue()
set DisplayValue()
}
class index{
calculatorContext: CalculatorContext()
zahlEingeben: ZahlEingeben()
zahlLoeschen: ZahlLoeschen()
guiAdapter: GuiAdapter()
document.getElementById(): guiAdapter.button
}
class GuiAdapter{
displayValue: HTMLElement
key1: HTMLElement
keyC: HTMLElement
}
HTMLElement --> ZahlEingeben
HTMLElement --> ZahlLoeschen
ZahlEingeben --> CalculatorContext
ZahlLoeschen --> CalculatorContext
CalculatorContext --> index
index --> GuiAdapter



@enduml